css/style.css
/* TABLETS (≤ 991 px) */
@media (max-width: 991px) {
    .area_inicial {
        gap: 1rem;
        /* menos espaço entre colunas */
        height: auto;

    }

    .texto_ini {
        padding-inline: 1.5rem;
        /* deixa padding só no lado esquerdo do texto */

    }
}

/* CELULARES (≤ 767 px) */
@media (max-width: 767px) {
    .area_inicial {
        grid-template-columns: 1fr;
        /*coloca tudo em uma só coluna*/
        grid-template-rows: auto auto;
        /*tera duas linhas com a altura automatica*/
        height: auto;
        /*conteiner cresce junto do conteudo*/
        gap: 2rem;
        /*adiciona espaço dentre os itens*/

    }

    .texto_ini {
        align-items: flex-start;
        /*alinha o conteudo para esquerda*/
        padding: 0;
        /*zera o padding*/
        padding-inline: 1rem;
        /*adiciona padding nas margens laterais*/
    }

    .imagem_principal {
        overflow: hidden;
        /*corta as partes da imagem que ultrapasse a area visivel*/
        height: 50vh;
        /*altura da imagem em 50% da altura da janela*/
    }

    .imagem_principal img {
        width: 100%;
        height: 100%;
        /*a imagem preenche totalmente o contêiner*/
        object-fit: cover;
        /*A imagem fica ajustada no contêiner sem distorção e corta se preciso*/
        transform: scale(1.05);
        /*zoom de uns 5% na imagem*/
        transform-origin: left center;
        /*o zoom foca no lado esquerdo da imagem*/
        transition: transform 0.4s ease-in-out;
        /*adiciona uma suavidade no zoom*/
    }


    .h2 {
        font-size: clamp(1.125rem, 4vw, 1.5rem);
        /*Define um tamanho de fonte que:
           * nunca será menor que 1.125rem
           * cresce com a tela (até 4vw)
           * mas nunca passa de 1.5rem
        */
    }

    #menu {
        height: 12vh;
        /*Isso deixa o menu visivelmente sem ocupar muito espaço*/
    }
}

/* CELULARES COM LARGURA MENOR (≤ 412 px) */
@media (max-width: 500px) {
    .area_inicial {
        grid-template-columns: 1fr;
        /*coloca tudo em uma só coluna*/
        grid-template-rows: auto auto;
        /*tera duas linhas com a altura automatica*/
        height: auto;
        /*conteiner cresce junto do conteudo*/
        gap: 1rem;
        /*adiciona espaço dentre os itens*/

    }

    .texto_ini {
        text-transform: uppercase;
        align-items: start;
        display: flex;
        flex-direction: column;
        justify-content: center;
        padding-inline: 2rem;
        /*adiciona padding nas margens laterais*/
    }

    #h2-sub {
        font-size: 15px;
    }

    .imagem_principal {
        
    }

    .imagem_principal img {
        
    }


    .h2 {
        font-size: clamp(1.125rem, 4vw, 1.5rem);
        /*Define um tamanho de fonte que:
           * nunca será menor que 1.125rem
           * cresce com a tela (até 4vw)
           * mas nunca passa de 1.5rem
        */
    }

    #menu {
        height: 12vh;
        /*Isso deixa o menu visivelmente sem ocupar muito espaço*/
    }
}

/* FONTES */

@font-face {
    font-family: "Sunborn";
    src: url(../fonts/sunborn-sans-one.otf);
}

@font-face {
    font-family: "Bree serif";
    src: url(../fonts/BreeSerif-Regular.ttf);
}

@font-face {
    font-family: "Open sans medium";
    src: url(../fonts/static/OpenSans-Medium.ttf);
}

@font-face {
    font-family: "Open sans light";
    src: url(../fonts/static/OpenSans-Medium.ttf);
}

.sunborn {
    font-family: 'Sunborn';
}

.bree-serif {
    font-family: 'Bree serif';
}

.open-sans-medium {
    font-family: 'Open sans medium';
}

.open-sans-light {
    font-family: 'Open sans light';
}


/* Icones do rodapé */

.icones {
    font-size: 30px;
}

.bi-instagram {
    color: transparent;
    background-clip: text;
    background-image: linear-gradient(to right, #833ab4, #fd1d1d, #fcb045);
}

.icones:hover {
    zoom: 150%;
    /* transform: scale(2.2); */
    transition: 0.5s;
}

.area_inicial {
    height: 70vh;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr;
    justify-content: center;
}

.imagem_principal {
    background-color: #844feb;
    width: 100%;
    height: 100%;
    object-fit: cover;
    transform-origin: left center;
    transition: transform 0.4s ease-in-out;
}

.texto_ini {
    text-transform: uppercase;
    align-items: start;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding-inline: 2rem;
    /*adiciona padding nas margens laterais*/
}

.h2 {
    font-family: 'Bree Serif';
    /* font-weight: 700 !important; */
    font-size: 10px;
}

#menu {
    height: 10dvh;
}

